[package]
name = "tryout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22.0", features = ["persistence"] }
egui-modal = "0.2.4"
rfd = "0.11.4"
ron = "0.8.0"
serde = "1.0.171"
